# aoaddons-python

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  README.md  setup.py
.github/workflows/: wheels.yml
pyaoaddons/: item_category_mapping.py  localization_mapping.py
scripts/: generate_assets.sh  install_rust.sh  prepare.bat
src/: convert.rs  lib.rs
